--- a/calculator/calculator.css
+++ b/calculator/calculator.css
@@ -5,7 +5,8 @@ body,div,h4,button,input,footer{
 
 body{
   background-color:#9d8f89;
-  font-family: "Comic Sans MS", cursive, sans-serif;
+  /*font-family: "Comic Sans MS", cursive, sans-serif;*/
+  font-family: Arial, Helvetica, sans-serif;
 }
 .container{
   
